--- a/f2j.html
+++ b/f2j.html
@@ -52,7 +52,7 @@ class Counter extends React.Component {
 					<button className="mdc-button mdc-button--raised" onClick={this.handleDecrease}>-</button>
 					
                     <div><img src="{arr[number % 2]}"/></div>
-		    <a src="https://f2janyway.github.io/dev/index.html"/>
+		    <a href="https://f2janyway.github.io/dev/index.html">링크</a>
                 </div>
 		)
 	}
