--- a/f2j.html
+++ b/f2j.html
@@ -51,8 +51,9 @@ class Counter extends React.Component {
 					&nbsp;&nbsp;&nbsp;
 					<button className="mdc-button mdc-button--raised" onClick={this.handleDecrease}>-</button>
 					
-                    <div><img src="{arr[number % 2]}"/></div>
+                    <div>
 		    <a href="https://f2janyway.github.io/dev/index.html"/>
+		    </div>
                 </div>
 		)
 	}
