--- a/link.html
+++ b/link.html
@@ -28,8 +28,8 @@
     <a href="brace://test.io/hello?type=a&no=1">brace://test.io/hello?type=a&no=1</a>
     <a href="brace://link.rebbit.net/move?type=a&no=1">brace://link.rebbit.net/move?type=a&no=1</a>
     <a href="brace://link.4mation.net/move?type=a&no=1">brace://link.4mation.net/move?type=a&no=1</a>
-    <a href="brace://link.rebbit?type=a&no=1">brace://link.rebbit?type=a&no=1</a>
-   <a href="brace://link.4mation?type=a&no=1">brace://link.4mation?type=a&no=1</a>
+    <a href="brace://link.rebbit/move?type=a&no=1">brace://link.rebbit/move?type=a&no=1</a>
+   <a href="brace://link.4mation/move?type=a&no=1">brace://link.4mation/move?type=a&no=1</a>
 </body>
 
 </html>
