--- a/link.html
+++ b/link.html
@@ -25,9 +25,9 @@
 
 <body>
   <a href="brace://test.io/">brace://test.io</a>
-    <a href="brace://test.io/hello?type=a&no=1">brace://test.io/hello?type=a&no=1</a>
-    <a href="brace://link.rebbit.net/move?type=a&no=1">brace://link.rebbit.net/move?type=a&no=1</a>
-    <a href="brace://link.4mation.net/move?type=a&no=1">brace://link.4mation.net/move?type=a&no=1</a>
+    <a href="brace://test.io/hello?type=market&no=2669">brace://test.io/hello?type=market&no=2669</a>
+    <a href="brace://link.rebbit.net/move?type=market&no=2669">brace://link.rebbit.net/move?ttype=market&no=2669</a>
+    <a href="brace://link.4mation.net/move?type=talk&no=1806">brace://link.4mation.net/move?type=talk&no=1806</a>
     <a href="brace://link.rebbit/move?type=a&no=1">brace://link.rebbit/move?type=a&no=1</a>
    <a href="brace://link.4mation/move?type=a&no=1">brace://link.4mation/move?type=a&no=1</a>
 </body>
