--- a/link.html
+++ b/link.html
@@ -30,6 +30,8 @@
     <a href="brace://link.4mation.net/move?type=talk&no=1806">brace://link.4mation.net/move?type=talk&no=1806</a>
     <a href="brace://link.rebbit/move?type=a&no=1">brace://link.rebbit/move?type=a&no=1</a>
    <a href="brace://link.4mation/move?type=a&no=1">brace://link.4mation/move?type=a&no=1</a>
+  
+  <a href="_blank">blank test</a>
 </body>
 
 </html>
