--- a/link.html
+++ b/link.html
@@ -31,7 +31,7 @@
     <a href="brace://link.rebbit/move?type=a&no=1">brace://link.rebbit/move?type=a&no=1</a>
    <a href="brace://link.4mation/move?type=a&no=1">brace://link.4mation/move?type=a&no=1</a>
   
-  <a href="www.naver.com" target="_blank">blank test</a>
+  <a href="https://www.google.com/" target="_blank">blank test</a>
 </body>
 
 </html>
